--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,11 +1,9 @@
-@mixin fonts($fw, $fz, $fl){
-    font-size: $fz;
-    font-weight: $fw;
-    line-height: $fl
-}
-
+@import "mixins.scss";
 @import "header_footer.scss";
 @import "communication.scss";
+@import "supported.scss";
+@import "our__cards.scss";
+@import "projects.scss";
 
 body{
     margin: 0;
@@ -28,7 +26,7 @@ body{
     border: none;
     padding: 0 40px;
     border-radius: 4px;
-    border: 2px solid #FF5A30;
+    border: 1px solid #FF5A30;
     &:hover{
         cursor: pointer;
         color: #FF5A30;
@@ -105,21 +103,11 @@ body{
         }
     }
 }
-.section__box{
+.bureau__box, .services__box{
     display: flex;
     flex-direction: column;
     align-items: center;
-    .section__title{
-        margin: 0;
-        padding-bottom: 24px;
-        @include fonts(700,46px,59.8px);
-    }
-    .section__text{
-        margin: 0;
-        padding-bottom: 60px;
-        color: #787A80;
-        @include fonts(400,18px,27px);
-    }
+    padding-bottom: 60px;
 }
 .construction__bureau{
     color:#1E212C;
@@ -150,32 +138,6 @@ body{
     }
     .values{
         padding-top: 180px;
-        .values__cards{
-            display: flex;
-            gap: 94px;
-            hr{
-                background: linear-gradient(to bottom, rgba(218, 219, 221, 0) 0%, rgba(218, 219, 221, 0.5) 12.33%, #DADBDD 51.91%, rgba(218, 219, 221, 0.5) 87.85%, rgba(218, 219, 221, 0) 100%);
-                width: 3px;
-                border-style: none;
-            }
-            .values__item{
-                width: 33.3%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                .item__title{
-                    margin: 0;
-                    padding-top: 24px;
-                    @include fonts(700,20px,30px);
-                }
-                .item__text{
-                    margin: 0;
-                    text-align: center;
-                    padding-top: 8px;
-                    color: #787A80;
-                }
-            }
-        }
     }
     .question{
         position: relative;
@@ -266,114 +228,6 @@ body{
         margin: 0;
     }
 }
-.projects{
-    padding: 120px 0;
-    .projects__box{
-        display: flex;
-        gap: 438px;
-        align-items: end;
-        padding-bottom: 60px;
-        .projects__title{
-            margin: 0;
-            @include fonts(700,46px,60px);
-        }
-        .arrow__box{
-            display: flex;
-            .arrow__left, .arrow__right{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 48px;
-                height: 48px;
-                border-radius: 50%;
-                background-color: #fff;
-                cursor: pointer;
-            }
-            .active{
-                background-color: #FF5A30;
-            }
-        }
-    }
-    .projects__cards{
-        display: flex;
-        gap: 30px;
-        padding-bottom: 80px;
-        .projects__item-1{
-            background-image: url(../../img/main/image.jpg);
-            background-repeat: no-repeat;
-        }
-        .projects__item-2{
-            background-image: url(../../img/main/image2.jpg);
-            background-repeat: no-repeat;
-        }
-        .projects__item-3{
-            background-image: url(../../img/main/image3.png);
-            background-repeat: no-repeat;
-        }
-        .projects__item-1, .projects__item-2, .projects__item-3{
-            display: flex;
-            flex-direction: column;
-            justify-content: end;
-            border-radius: 4px;
-            width: 390px;
-            height: 440px;
-            box-shadow: 0 2px 3px -2px;
-            &:hover{
-                .item__box{
-                    .orange__button{
-                        display: block;
-                    }
-                }
-            }
-            .item__box{
-                background-color: #FFFFFF;
-                padding: 16px 20px 24px 20px;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                .orange__button{
-                    display: none;
-                    @include fonts(700,14px,43px);
-                    background-color: #fff;
-                    color: #FF5A30;
-                    border: 1px solid #FF5A30;
-                    margin-top: 24px;
-                    padding: 0 32px;
-                    &:hover{
-                        color: #FFFFFF;
-                        background-color: #FF5A30;
-                    }
-                }
-                .item__title{
-                    margin: 0;
-                    @include fonts(700,20px,30px);
-                    color: #1E212C;
-                    text-align: center;
-                    padding-bottom: 4px;
-                }
-                .item__text{
-                    margin: 0;
-                    color: #787A80;
-                    @include fonts(400,14px,21px);
-                    text-align: center;
-                }
-            }
-        }
-    }
-    .projects__view{
-        display: flex;
-        justify-content: center;
-        gap: 40px;
-        .view__title{
-            margin: 0;
-            @include fonts(700,28px,42px);
-            align-self: center;
-        }
-        button{
-            @include fonts(700,16px,48px);
-        }
-    }
-}
 
 .supported {
     &__section{
@@ -381,25 +235,6 @@ body{
     }
     &__box{
         padding: 80px 0 110px 0;
-    }
-    &__title{
-        padding-top: 60px;
-        padding-bottom: 60px;
-        text-align: center;
-        margin: 0;
-        @include fonts(700,46px,60px);
-    }
-    &__list{
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        gap: 102px;
-        a{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
     }
     &__content{
         display: flex;
