--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1,7 +1,8 @@
 @import "mixins.scss";
 @import "header_footer.scss";
 @import "communication.scss";
-@import "supported.scss";
+@import "supported_companies.scss";
+@import "supported_clients.scss";
 @import "our__cards.scss";
 @import "projects.scss";
 
@@ -226,56 +227,6 @@ body{
     h3{
         @include fonts(700,28px,42px);
         margin: 0;
-    }
-}
-
-.supported {
-    &__section{
-        background-color: #F4F5F6;
-    }
-    &__box{
-        padding: 80px 0 110px 0;
-    }
-    &__content{
-        display: flex;
-        gap: 135px;
-        position: relative;
-        .shift__img{
-            position: relative;
-            top: 60px;
-            border-radius: 4px;
-        }
-    }
-    &__block{
-        width: 600px;
-    }
-    &__description{
-        margin: 0;
-        padding: 24px 0;
-    }
-    &__switch{
-        display: flex;
-        justify-content: space-between;
-        align-items: end;
-    }
-    &__name{
-        h5{
-            margin: 0;
-            @include fonts(700,16px,25.6px);
-        }
-        p{
-            padding-top: 4px;
-            margin: 0;
-            @include fonts(400,14px,21px);
-        }
-    }
-    &__arrows{
-        height: 24px;
-        img{
-            &:hover{
-                cursor: pointer;
-            }
-        }
     }
 }
 
