--- a/css/services.css
+++ b/css/services.css
@@ -44,6 +44,9 @@
   font-weight: 700;
   line-height: 25.6px;
 }
+.navbar .navbar__list a:hover {
+  color: #FF5A30;
+}
 
 .contacts {
   display: -webkit-box;
@@ -367,9 +370,10 @@
 
 .description__section {
   background-color: #F4F5F6;
+  background-size: contain;
 }
 .description__box {
-  padding: 60px 0 180px 0;
+  padding: 80px 0 180px 0;
   width: 600px;
 }
 .description__path {
